elucid/elucid-language/src/parser/snapshots/elucid_language__parser__tests__null_literal.snap
---
source: elucid-language/src/parser/mod.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Filter(
            Binary(
                Equal,
                Field(
                    "value",
                ),
                Null,
            ),
        ),
    ],
}
