elucid/elucid-language/src/parser/snapshots/elucid_language__parser__tests__parenthesis_precedence.snap
---
source: elucid-language/src/parser/mod.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Where(
            Binary(
                And,
                Binary(
                    Or,
                    Field(
                        "a",
                    ),
                    Field(
                        "b",
                    ),
                ),
                Field(
                    "c",
                ),
            ),
        ),
    ],
}
