elucid/elucid-language/src/parser/snapshots/elucid_language__parser__tests__project_cmd.snap
---
source: elucid-language/src/parser/mod.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Project(
            [
                Field(
                    "name",
                ),
                Field(
                    "age",
                ),
                Field(
                    "active",
                ),
            ],
        ),
    ],
}
