elucid/elucid-language/src/parser/snapshots/elucid_language__parser__tests__select_cmd.snap
---
source: elucid-language/src/parser/mod.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Select(
            [
                Field(
                    "name",
                ),
                Field(
                    "age",
                ),
                Field(
                    "active",
                ),
            ],
        ),
    ],
}
