elucid/elucid-language/src/parser/snapshots/elucid_language__parser__tests__should_fail.snap
---
source: elucid-language/src/parser/mod.rs
expression: ast.unwrap_err()
---
ParserError(
    [
        found 'Pipe' at 8..9 expected dataset name,
    ],
)
