elucid/elucid-language/src/parser/snapshots/elucid_language__parser__tests__sort_mixed.snap
---
source: elucid-language/src/parser/mod.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Sort(
            [
                SortExpression {
                    expression: Field(
                        "count",
                    ),
                    order: Descending,
                },
                SortExpression {
                    expression: Field(
                        "status",
                    ),
                    order: Ascending,
                },
                SortExpression {
                    expression: Field(
                        "time",
                    ),
                    order: Ascending,
                },
            ],
        ),
    ],
}
