elucid/elucid-language/src/parser/snapshots/elucid_language__parser__tests__sort_parenthesized.snap
---
source: elucid-language/src/parser/mod.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Sort(
            [
                SortExpression {
                    expression: Binary(
                        Add,
                        Field(
                            "a",
                        ),
                        Field(
                            "b",
                        ),
                    ),
                    order: Descending,
                },
            ],
        ),
    ],
}
