elucid/elucid-language/src/parser/snapshots/elucid_language__parser__tests__string_quoting.snap
---
source: elucid-language/src/parser/mod.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Where(
            Binary(
                Equal,
                Field(
                    "name",
                ),
                String(
                    "O'Conner",
                ),
            ),
        ),
    ],
}
